--- a/app/sass/_landing.sass
+++ b/app/sass/_landing.sass
@@ -13,7 +13,7 @@
 
 .landing-headline
   margin: 0 0 5vh 0
-  line-height: 5rem
+  line-height: 8rem
   text-align: center
   font:
     size: 10rem
@@ -23,7 +23,7 @@
   font:
     size: 3rem
     family: 'Archivo Black', sans-serif
-  letter-spacing: 1.5rem
+  letter-spacing: 1rem
 
 .link-list
   display: flex
